<resources>
    <string name="app_name">workoutlog</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have an account? <u>sign up</u></string>
    <string name="login">Login</string>
    <string name="Password">Enter Password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="Email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Signup_button">SIGN UP</string>
    <string name="Login">Already have an account ? Login</string>
    <string name="profile">profile</string>
    <string name="track">track</string>
    <string name="plan">plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login1">lOGIN</string>
</resources>